fix: Corrige exibição de dados da universidade para funcionários
- Atualiza a lógica para consumir e armazenar corretamente os dados da universidade (ID, nome, caminho do logo) fornecidos pelo backend no momento do login de um funcionário. Isso resolve o problema onde esses campos apareciam como nulos no localStorage.

--- a/angular.json
+++ b/angular.json
@@ -62,7 +62,8 @@
               "buildTarget": "UniFy:build:production"
             },
             "development": {
-              "buildTarget": "UniFy:build:development"
+              "buildTarget": "UniFy:build:development",
+              "proxyConfig": "proxy.conf.json"
             }
           },
           "defaultConfiguration": "development"
